--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "license": "MIT",
   "scripts": {
     "start": "npx tsc && node ./dist/server",
-    "build": "npx tsc"
+    "build": "npx tsc",
+    "test": "jest"
   },
   "dependencies": {
     "@types/validator": "^13.1.0",
@@ -20,7 +21,13 @@
   "devDependencies": {
     "@types/cors": "^2.8.8",
     "@types/express": "^4.17.9",
+    "@types/jest": "^26.0.20",
+    "@types/supertest": "^2.0.10",
+    "jest": "^26.6.3",
+    "nock": "^13.0.7",
     "nodemon": "^2.0.6",
+    "supertest": "^6.1.3",
+    "ts-jest": "^26.5.1",
     "typescript": "^4.1.2"
   }
 }
