--- a/tsconfig.json
+++ b/tsconfig.json
@@ -66,5 +66,8 @@
     "skipLibCheck": true /* Skip type checking of declaration files. */,
     "forceConsistentCasingInFileNames": true /* Disallow inconsistently-cased references to the same file. */
   },
-  "exclude": ["node_modules", "**/*.espec.ts"]
+  "exclude": [
+    "node_modules",
+    "**/*.espec.ts"
+  ] /*não compilar a pasta node_modules e de testes*/
 }
