--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/validator": "^13.1.0",
     "cors": "^2.8.5",
     "date-fns": "^2.17.0",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "pg": "^8.5.1",
     "sequelize": "^6.3.5"
