--- a/.env-example
+++ b/.env-example
@@ -1,7 +1,7 @@
     # POSTGRES
-    POSTGRES_HOST=
-    POSTGRES_DB=
-    POSTGRES_PORT=5432
-    POSTGRES_USER=
-    POSTGRES_PASS=
+    DATABASE_HOST=
+    DATABASE_DB=
+    DATABASE_PORT=5432
+    DATABASE_USER=
+    DATABASE_PASS=
     DIALECT=postgres
